# filemerge

./: Readme.md  pyproject.toml
src/filemerge/: __init__.py  __main__.py  filemerge.py  main.py
tests/: test_filemerge.py
